@@ -1,3 +1,10 @@
+Wed May  5 23:42:42 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkcombobox.h: 
+	* gtk/gtkcombobox.c (gtk_combo_box_get_active_text): 
+	Add gtk_combo_box_get_active_text() convenience 
+	function. (#136372, Christian Neumeir, patch by Olivier Andrieu) 
+
 2004-05-05  Elijah Newren  <newren@math.utah.edu>
 
 	Changes to support do-not-focus-on-map hint in conjunction with
